# cpp-projet-2025

./: .gitignore  CMakeLists.txt  README.md
include/core/: Game.hpp
modules/core/: Game.ixx  GameState.ixx
modules/entities/: Coin.ixx  Player.ixx
modules/ui/: Button.ixx  LevelEditor.ixx  LevelSelectMenu.ixx  MainMenu.ixx  OptionsMenu.ixx  TextRenderer.ixx  VictoryScreen.ixx
modules/world/: Level.ixx  LevelData.ixx  LevelManager.ixx  Platform.ixx
src/: main.cpp
src/core/: Game.cpp
